REGRESSION(r139282): Old caret sometimes gets "stuck" (not repainted) in contenteditable elements. <http://webkit.org/b/119520> <rdar://problem/14658929>

Reviewed by Simon Fraser.

Source/WebCore:

When computing a new caret rect, don't forget to repaint the old rect if the caret jumped
from one node to another.
We were being a little too clever, assuming that oldRect==newRect meant that no repaint was
necessary, but moving from (0,0) in one node to (0,0) in another would cause a ghost caret
in the old node.

Test: fast/repaint/caret-jump-between-nodes.html

* editing/FrameSelection.cpp:
(WebCore::FrameSelection::recomputeCaretRect):

    Fall through all the way down to caret repaints if the selection's new anchor node is not
    the same as m_previousCaretNode.

LayoutTests:

* fast/repaint/caret-jump-between-nodes-expected.txt: Added.
* fast/repaint/caret-jump-between-nodes.html: Added.

Canonical link: https://commits.webkit.org/137523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153815 268f45cc-cd09-0410-ab3c-d52691b4dbfc